set (sources
    ActionChoice.cc
    CaoBerneAction.cc
    CompositeAction.cc
    CompositeDoubleAction.cc
    CoulombAction.cc
    DotGeomAction.cc
    DoubleActionChoice.cc
    EFieldAction.cc
    EwaldAction.cc
    EwaldImagePairAction.cc
    GateAction.cc
    GaussianAction.cc
    GaussianDotAction.cc
    GrapheneAction.cc
    GridPotential.cc
    HyperbolicAction.cc
    ImagePairAction.cc
    JelliumSlab.cc
    OpticalLatticeAction.cc
    PairAction.cc
    PrimAnisSHOAction.cc
    PrimColloidalAction.cc
    PrimCosineAction.cc
    PrimImageAction.cc
    PrimSHOAction.cc
    PrimShellAction.cc
    PrimTorusAction.cc
    QPCAction.cc
    RingGateAction.cc
    SHOAction.cc
    SHODotAction.cc
    SmoothedGridPotential.cc
    SphereAction.cc
    SpringAction.cc
    SpringTensorAction.cc
    StillWebAction.cc
    TimpQPC.cc
    TwoQDAction.cc
    WellImageAction.cc
    coulomb/CoulombLinkAction.cpp
    coulomb/Coulomb1DLinkAction.cpp
    coulomb/Coulomb3DLinkAction.cpp
    interaction/PairIntegrator.cpp
    interaction/PairPotential.cpp
    interaction/PrimitivePairAction.cpp
    interaction/SHOInteraction.cpp
)

add_library(action STATIC ${sources})
