noinst_LTLIBRARIES = libaction.la
libaction_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libaction_la_SOURCES = \
	ActionChoice.cc \
	CaoBerneAction.cc \
	CompositeAction.cc \
	CompositeDoubleAction.cc \
	CoulombAction.cc \
	DotGeomAction.cc \
	DoubleActionChoice.cc \
	EFieldAction.cc \
	EwaldAction.cc \
	EwaldImagePairAction.cc \
	FixedPhaseAction.cc \
	GateAction.cc \
	GaussianAction.cc \
	GaussianDotAction.cc \
	GrapheneAction.cc \
	HyperbolicAction.cc \
	ImagePairAction.cc \
	JelliumSlab.cc \
	OpticalLatticeAction.cc \
	PairAction.cc \
	PrimAnisSHOAction.cc \
	PrimColloidalAction.cc \
	PrimCosineAction.cc \
	PrimSHOAction.cc \
	PrimShellAction.cc \
	PrimTorusAction.cc \
	PrimativePairAction.cc \
	QPCAction.cc \
	RingGateAction.cc \
	SHOAction.cc \
	SHODotAction.cc \
	SmoothedGridPotential.cc \
	SphereAction.cc \
	SpringAction.cc \
	SpringTensorAction.cc \
	StillWebAction.cc \
	TimpQPC.cc \
	TwoQDAction.cc \
	WellImageAction.cc
noinst_HEADERS = \
	Action.h \
	ActionChoice.h \
	CaoBerneAction.h \
	CompositeAction.h \
	CompositeDoubleAction.h \
	CoulombAction.h \
	DotGeomAction.h \
	DoubleAction.h \
	DoubleActionChoice.h \
	EFieldAction.h \
	EwaldAction.h \
	EwaldImagePairAction.h \
	FixedPhaseAction.h \
	GateAction.h \
	GaussianAction.h \
	GaussianDotAction.h \
	GrapheneAction.h \
	HyperbolicAction.h \
	ImagePairAction.h \
	JelliumSlab.h \
	OpticalLatticeAction.h \
	PairAction.h \
	PrimAnisSHOAction.h \
	PrimColloidalAction.h \
	PrimCosineAction.h \
	PrimSHOAction.h \
	PrimShellAction.h \
	PrimTorusAction.h \
	PrimativePairAction.h \
	QPCAction.h \
	RingGateAction.h \
	SHOAction.h \
	SHODotAction.h \
	SmoothedGridPotential.h \
	SphereAction.h \
	SpringAction.h \
	SpringTensorAction.h \
	StillWebAction.h \
	TimpQPC.h \
	TwoQDAction.h \
	WellImageAction.h