noinst_LTLIBRARIES = libaction.la
libaction_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src \
    -I$(top_srcdir)/contrib/blitz-0.9 \
    -I$(top_bindir)/contrib/blitz-0.9
libaction_la_SOURCES = \
	ActionChoice.cc \
	CaoBerneAction.cc \
	CompositeAction.cc \
	CompositeDoubleAction.cc \
	CoulombAction.cc \
	DotGeomAction.cc \
	DoubleActionChoice.cc \
	EFieldAction.cc \
	EwaldAction.cc \
	EwaldImagePairAction.cc \
	GateAction.cc \
	GaussianAction.cc \
	GaussianDotAction.cc \
	GrapheneAction.cc \
	GridPotential.cc \
	HyperbolicAction.cc \
	ImagePairAction.cc \
	JelliumSlab.cc \
	OpticalLatticeAction.cc \
	PairAction.cc \
	PrimAnisSHOAction.cc \
	PrimColloidalAction.cc \
	PrimCosineAction.cc \
	PrimImageAction.cc \
	PrimSHOAction.cc \
	PrimShellAction.cc \
	PrimTorusAction.cc \
	QPCAction.cc \
	RingGateAction.cc \
	SHOAction.cc \
	SHODotAction.cc \
	SmoothedGridPotential.cc \
	SphereAction.cc \
	SpringAction.cc \
	SpringTensorAction.cc \
	StillWebAction.cc \
	TimpQPC.cc \
	TwoQDAction.cc \
	WellImageAction.cc \
    coulomb/Coulomb1DLinkAction.cpp \
    coulomb/Coulomb3DLinkAction.cpp \
    coulomb/CoulombLinkAction.cpp \
	interaction/PairIntegrator.cpp \
	interaction/PairPotential.cpp \
	interaction/PrimitivePairAction.cpp \
	interaction/SHOInteraction.cpp
noinst_HEADERS = \
	Action.h \
	ActionChoice.h \
	CaoBerneAction.h \
	CompositeAction.h \
	CompositeDoubleAction.h \
	CoulombAction.h \
	DotGeomAction.h \
	DoubleAction.h \
	DoubleActionChoice.h \
	EFieldAction.h \
	EwaldAction.h \
	EwaldImagePairAction.h \
	GateAction.h \
	GaussianAction.h \
	GaussianDotAction.h \
	GrapheneAction.h \
	GridPotential.h \
	HyperbolicAction.h \
	ImagePairAction.h \
	JelliumSlab.h \
	OpticalLatticeAction.h \
	PairAction.h \
	PrimAnisSHOAction.h \
	PrimColloidalAction.h \
	PrimCosineAction.h \
	PrimImageAction.h \
	PrimSHOAction.h \
	PrimShellAction.h \
	PrimTorusAction.h \
	QPCAction.h \
	RingGateAction.h \
	SHOAction.h \
	SHODotAction.h \
	SmoothedGridPotential.h \
	SphereAction.h \
	SpringAction.h \
	SpringTensorAction.h \
	StillWebAction.h \
	TimpQPC.h \
	TwoQDAction.h \
	WellImageAction.h \
    coulomb/Coulomb1DLinkAction.h \
    coulomb/Coulomb3DLinkAction.h \
    coulomb/CoulombLinkAction.h \
	interaction/PairIntegrator.h \
	interaction/PairPotential.h \
	interaction/PrimitivePairAction.h \
    interaction/SHOInteraction.h
	
