noinst_LTLIBRARIES = libadvancer.la
libadvancer_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libadvancer_la_SOURCES = \
        AlternatingParticleChooser.cc \
        CollectiveMover.cc \
	CollectiveSectionMover.cc \
	CollectiveSectionSampler.cc \
        mover/DampedFreeTensorMover.cc \
        DisplaceMoveSampler.cc \
	DoubleCollectiveSectionSampler.cc \
        DoubleDisplaceMoveSampler.cc \
        DoubleMLSampler.cc \
        DoubleSectionChooser.cc \
        ExchangeMover.cc \
        mover/FreeMover.cc \
        mover/FreeMoverPBC.cc \
        mover/FreeTensorMover.cc \
        mover/HyperbolicMover.cc \
        MiddleSectionChooser.cc \
        ModelSampler.cc \
        MultiLevelSampler.cc \
        MultiSpeciesParticleChooser.cc \
        NonZeroSectionChooser.cc \
        PairChooser.cc \
        ParticleChooser.cc \
        PermutationChooser.cc \
        RandomPermutationChooser.cc \
        SectionChooser.cc \
        SimpleParticleChooser.cc \
        SpeciesParticleChooser.cc \
        SpinModelSampler.cc \
        SpinStatePermutationChooser.cc \
        TwoPairChooser.cc \
        UniformMover.cc \
        WalkingChooser.cc

noinst_HEADERS = \
        AlternatingParticleChooser.h \
        CollectiveMover.h \
	CollectiveSectionMover.h \
	CollectiveSectionSampler.h \
        mover/DampedFreeTensorMover.h \
        DisplaceMoveSampler.h \
	DoubleCollectiveSectionSampler.h \
        DoubleDisplaceMoveSampler.h \
        DoubleMLSampler.h \
        DoubleSectionChooser.h \
        ExchangeMover.h \
        mover/FreeMover.h \
        mover/FreeMoverPBC.h \
        mover/FreeTensorMover.h \
        mover/HyperbolicMover.h \
        MiddleSectionChooser.h \
        ModelSampler.h \
        mover/Mover.h \
        MultiLevelSampler.h \
        MultiSpeciesParticleChooser.h \
        NonZeroSectionChooser.h \
        PairChooser.h \
        ParticleChooser.h \
        PermutationChooser.h \
        RandomPermutationChooser.h \
        SectionChooser.h \
        SectionSamplerInterface.h \
        SimpleParticleChooser.h \
        SpeciesParticleChooser.h \
        SpinModelSampler.h \
        SpinStatePermutationChooser.h \
        TwoPairChooser.h \
        UniformMover.h \
        WalkingChooser.h
