noinst_LTLIBRARIES = libalgorithm.la
libalgorithm_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/contrib/blitz-0.9
libalgorithm_la_SOURCES = \
	BinProbDensity.cc \
	Collect.cc \
	ConditionalDensityGrid.cc \
	CubicLattice.cc \
	Measure.cc \
	PathReader.cc \
	ProbDensityGrid.cc \
	RingLattice.cc \
	SeedRandom.cc \
	StructReader.cc \
	WorkerShifter.cc \
	WritePaths.cc \
	WriteProbDensity.cc
noinst_HEADERS = \
	Algorithm.h \
	BinProbDensity.h \
	Collect.h \
	ConditionalDensityGrid.h \
	CompositeAlgorithm.h \
	CubicLattice.h \
	Loop.h \
	Measure.h \
	PathReader.h \
	Positioner.h \
	ProbDensityGrid.h \
	RingLattice.h \
	SeedRandom.h \
	StructReader.h \
	WorkerShifter.h \
	WritePaths.h \
	WriteProbDensity.h
