noinst_LTLIBRARIES = libbase.la
libbase_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src
libbase_la_SOURCES = \
    BeadFactory.cc \
    DoubleParallelPaths.cc \
    EnumeratedModelState.cc \
    ParallelPaths.cc \
    Paths.cc \
    SerialPaths.cc \
    SimInfoWriter.cc \
    SimulationInfo.cc \
    Species.cc \
    SpinModelState.cc \
    XMLWriter.cc
noinst_HEADERS = \
    BeadFactory.h \
    Beads.h \
    DoubleParallelPaths.h \
    EnumeratedModelState.h \
    Help.h \
    LinkSummable.h \
    ModelState.h \
    ParallelPaths.h \
    Paths.h \
    SerialPaths.h \
    SimInfoWriter.h \
    SimulationInfo.h \
    Species.h \
    SpinModelState.h \
    XMLWriter.h
