noinst_LTLIBRARIES = libbase.la
libbase_la_CXXFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I $(top_srcdir)/contrib/blitz-0.9
libbase_la_SOURCES = \
    BeadFactory.cc \
    Charges.cpp \
    DoubleParallelPaths.cc \
    EnumeratedModelState.cc \
    MagneticFluxCalculator.cpp \
    MagneticFluxWeight.cpp \
    ParallelPaths.cc \
    Paths.cc \
    SerialPaths.cc \
    SimInfoWriter.cc \
    SimulationInfo.cc \
    Species.cc \
    SpinModelState.cc \
    XMLWriter.cc
noinst_HEADERS = \
    BeadFactory.h \
    Beads.h \
    Charges.h \
    DoubleParallelPaths.h \
    EnumeratedModelState.h \
    Help.h \
    LinkSummable.h \
    MagneticFluxCalculator.h \
    MagneticFluxWeight.h \
    ModelState.h \
    ParallelPaths.h \
    Paths.h \
    SerialPaths.h \
    SimInfoWriter.h \
    SimulationInfo.h \
    Species.h \
    SpinModelState.h \
    XMLWriter.h
